--- a/1.html
+++ b/1.html
@@ -27,7 +27,7 @@
     <details>
         <summary>Benötigtes Material</summary>
        <ul>
-      <li>Was braucht man und was liegt da
+      <li>Was braucht man/ was stellen wir an den Tischen zur Verfügung?
 
        </ul>
     </details>
