--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
    <meta charset="UTF-8">
        <link rel="stylesheet" href="css/pico.min.css">
     <script src="js/common.js"></script>
-    <title>👣 Wuselstationen</title>
+    <title>Materialien zum SET am 2. Februar 2026</title>
 </head>
 <body>
 
 
     <main class="container">
-<h1>👣 Übersicht unserer selbstorganisierten Wuselstationen</h1>
+        <h1>Materialien zum Schulentwicklungstag der beruflichen Schulen im Kreis Ostholstein in Oldenburg am 2. Februar 2026</h1>
+        <h2>Austauschrunden am Vormittag</h2>
+
+          <p><a href="austauschrunde1.html"><button>Austausch zum ersten Impuls: Guter Unterricht? Auf die Haltung kommt es an!</button></a></p>
+          <p><a href="austauschrunde2.html"><button>Austausch zum zweiten Impuls: Zukunftsgestaltendes Lernen: Über das 'Warum?' in der Bildung</button></a></p>
+        
+<h2>👣 Übersicht unserer selbstorganisierten Wuselstationen</h2>
         <p>Hier findet ihr Materialien und weiterführende Informationen zu den Wuselstationen des Schulentwicklungstages:
         <p><a href="1.html"><button>#1: Methodischer Rahmen für Gespräche im pädagogischen Raum - mit Lernenden und als kollegiale Beratung</button></a></p>
       <p><a href="2.html"><button>#2: Rahmenwerk der Inner Development Goals: Selbstentwicklung im Unterricht</button></a></p>
