--- a/austauschrunde1.html
+++ b/austauschrunde1.html
@@ -1,1 +1,30 @@
 
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/pico.min.css">
+    <script src="js/common.js"></script>
+    <title>Wuselstationen</title>
+</head>
+<body>
+    <main class="container">
+        <h1>Austauschrunde 1</h1>
+        <p>Tausche dich mit einer oder mehreren Person(en) über folgende Fragen aus:</p>
+        <ol>
+            <li>Welche ein bis drei Erkenntnisperlen nimmst du aus dem Impuls zum Thema Haltung mit?</li>
+            <li>Die Rolle als Lehrkraft kann sehr unterschiedlich definiert und ausgefüllt werden. Betrachte deine momentane Haltung zu deiner Rolle:
+                <ol type="a">
+                    <li>Zu welcher Rolle oder welchen Rollen fühlst du dich (z.B. von den Schüler*innen) eingeladen?</li>
+                    <li>Was würde es bewirken, wenn du diese Rolle(n) annähmst?</li>
+                    <li>Welche Rolle fühlt sich für dich stimmig an?</li>
+                    <li>Welche Rolle willst du dir zu eigen machen?</li>
+                </ol>
+            </li>
+        </ol>
+        <p>Finde jeweils passende Metaphern dafür (z.B. Antreiber, Regelwächterin, Lernbegleiter, Bergführerin, Mama, …).</p>
+        <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
+    </main>
+</body>
+</html>
