--- a/9.html
+++ b/9.html
@@ -1,46 +1,33 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta charset="UTF-8">
-       <link rel="stylesheet" href="css/pico.min.css">
+    <link rel="stylesheet" href="css/pico.min.css">
     <script src="js/common.js"></script>
     <title>Wuselstationen</title>
 </head>
 <body>
-
-
     <main class="container">
-
-<h1>Wuselstation #x: Titel</h1>
-
-  <article id="article">
-     👉 Kurze Info , um was es geht.
-  </article>
-
-  <details>
-        <summary>Hintergrund</summary>
-        <p>Was ist der Sinn dieser Station?
-        </p>
-      
-    </details>
-    <details>
-        <summary>Benötigtes Material</summary>
-       <ul>
-      <li>Was braucht man/ was stellen wir an den Tischen zur Verfügung?
-
-       </ul>
-    </details>
-
-<h2>Beschreibung</h2>
-<p>Was kann hier gemacht werden? Wie soll man das machen?
-</p>
-
-
-    <p> <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
-</main>
-
-    
-
+        <h1>Wuselstation #9: Systemische Fragen</h1>
+        <article id="article">
+            👉 Du findest hier ein Kartenset mit systemischen Fragen als Anregung zum Reflektieren, wenn es mal schwierig wird, du dich aufregst oder nicht weiterweißt.
+        </article>
+        <details>
+            <summary>Hintergrund</summary>
+            <p>In der Pädagogik bedeutet der systemische Ansatz, dass nicht nur ein einzelner Mensch als das Problem betrachtet, sondern das gesamte Beziehungsgefüge in den Blick genommen wird. Auch ist bedeutsam, wie wir eine Situation interpretieren. Beim „Reframing" betrachten wir eine Situation bewusst aus einer anderen Perspektive und setzen sie in einen anderen „Rahmen". Dies kann zu neuen Lösungsideen oder einem anderen Problemverständnis führen.</p>
+            <p><strong>Sinn dieser Station:</strong> Blick erweitern, Situationen ggf. neu bewerten, Entlastung</p>
+        </details>
+        <details>
+            <summary>Benötigtes Material</summary>
+            <ul>
+                <li>Kartenset</li>
+            </ul>
+        </details>
+        <h2>Beschreibung</h2>
+        <p>Suche dir eine herausfordernde Situation aus deinem Unterrichtsalltag aus. Ziehe nun eine Karte und betrachte die Frage. Welche Antworten findest du? Welche Gedanken löst diese Frage bei dir aus? Wie könntest du deine Situation anders betrachten? Wenn diese Karte nicht passt, nimm eine andere, die dir verheißungsvoller erscheint.</p>
+        <p>Tausche dich gerne mit anderen über deine Gedanken aus.</p>
+        <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
+    </main>
 </body>
 </html>
