--- a/10.html
+++ b/10.html
@@ -1,46 +1,32 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta charset="UTF-8">
-       <link rel="stylesheet" href="css/pico.min.css">
+    <link rel="stylesheet" href="css/pico.min.css">
     <script src="js/common.js"></script>
     <title>Wuselstationen</title>
 </head>
 <body>
-
-
     <main class="container">
-
-<h1>Wuselstation #x: Titel</h1>
-
-  <article id="article">
-     👉 Kurze Info , um was es geht.
-  </article>
-
-  <details>
-        <summary>Hintergrund</summary>
-        <p>Was ist der Sinn dieser Station?
-        </p>
-      
-    </details>
-    <details>
-        <summary>Benötigtes Material</summary>
-       <ul>
-      <li>Was braucht man/ was stellen wir an den Tischen zur Verfügung?
-
-       </ul>
-    </details>
-
-<h2>Beschreibung</h2>
-<p>Was kann hier gemacht werden? Wie soll man das machen?
-</p>
-
-
-    <p> <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
-</main>
-
-    
-
+        <h1>Wuselstation #10: Kurze Bewegungsübungen für den Unterricht: „Ich schaf(f) das!"</h1>
+        <article id="article">
+            👉 Leichte Körperübungen für mehr Lebenspower
+        </article>
+        <details>
+            <summary>Hintergrund</summary>
+            <p>BODY 2 BRAIN CCM® Übungen basieren auf Erkenntnissen von Embodiment / Body Mind-Untersuchungen zur Wechselwirkung zwischen Körper, Psyche und Verhalten. Grundlage ist die Vernetzung unseres Nervensystems. Das Kartenset wurde von Dr. med. Claudia Croos-Müller entwickelt, im Kösel-Verlag veröffentlicht und trägt den Titel: „Ich schaf(f) das!"</p>
+            <p><strong>Sinn dieser Station:</strong> Freude, Stärkung, Abwechslung, Aufwachen, Gute Laune, Beruhigung, …</p>
+        </details>
+        <details>
+            <summary>Benötigtes Material</summary>
+            <ul>
+                <li>Kartenset „Ich schaf(f) das!"</li>
+            </ul>
+        </details>
+        <h2>Beschreibung</h2>
+        <p>Spielen und Experimentieren! Ziehe zum Beispiel eine Karte und mache die Übung – gerne auch mit anderen zusammen. Oder suche dir eine Karte zu einem für dich passenden Thema aus. Vielleicht wäre das auch ein schöner Energizer für deinen Unterricht? Tauscht euch darüber aus.</p>
+        <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
+    </main>
 </body>
 </html>
