--- a/11.html
+++ b/11.html
@@ -1,46 +1,34 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta charset="UTF-8">
-       <link rel="stylesheet" href="css/pico.min.css">
+    <link rel="stylesheet" href="css/pico.min.css">
     <script src="js/common.js"></script>
     <title>Wuselstationen</title>
 </head>
 <body>
-
-
     <main class="container">
-
-<h1>Wuselstation #x: Titel</h1>
-
-  <article id="article">
-     👉 Kurze Info , um was es geht.
-  </article>
-
-  <details>
-        <summary>Hintergrund</summary>
-        <p>Was ist der Sinn dieser Station?
-        </p>
-      
-    </details>
-    <details>
-        <summary>Benötigtes Material</summary>
-       <ul>
-      <li>Was braucht man/ was stellen wir an den Tischen zur Verfügung?
-
-       </ul>
-    </details>
-
-<h2>Beschreibung</h2>
-<p>Was kann hier gemacht werden? Wie soll man das machen?
-</p>
-
-
-    <p> <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
-</main>
-
-    
-
+        <h1>Wuselstation #11: Selbsttest zur pädagogischen Beziehungsgestaltung</h1>
+        <article id="article">
+            👉 Du kannst hier deine Haltung in Bezug auf einen bestimmten Schüler / eine bestimmte Schülerin oder eine Klasse in den Blick nehmen. Dabei steht hier die Beziehungsgestaltung im Mittelpunkt.
+        </article>
+        <details>
+            <summary>Hintergrund</summary>
+            <p>Wenn es in der Beziehung zwischen Lehrkraft und Klasse oder einem bestimmten Schüler oder einer bestimmten Schülerin hakt, kann die Haltung der Lehrkraft eine Rolle spielen. Manchmal ist sie schon im Vorfeld für die Störung verantwortlich, manchmal verhärtet sie sich erst als Reaktion auf einen Konflikt oder Ähnliches. Allzu leicht entstehen daraus Teufelskreise, die die Dynamik weiter anheizen. Es verlieren dann beide Seiten.</p>
+            <p><strong>Sinn dieser Station:</strong> Mit dem Selbsttest kannst du deine Haltung in den Blick nehmen und darüber nachdenken, welche Wirkung genau diese deine Haltung möglicherweise auf die Dynamik und dein Gegenüber haben könnte. Da Lehrkräfte am längeren Hebel sitzen, liegt es an ihnen, Teufelskreise zu durchbrechen und ggf. neue Wege zu gehen.</p>
+        </details>
+        <details>
+            <summary>Benötigtes Material</summary>
+            <ul>
+                <li>Eine Kopie des Selbsttests</li>
+            </ul>
+        </details>
+        <h2>Beschreibung</h2>
+        <p>Überlege dir zuerst, zu wem du deine Haltung in den Blick nehmen willst. Es kann eine Person oder Gruppe sein. Am einfachsten sind Menschen oder Gruppen, mit denen es sich leicht anfühlt. Am ergiebigsten ist die Übung, wenn du dir ein Gegenüber aussuchst, mit dem es sich schwer anfühlt. Dann fülle den Selbsttest möglichst zügig, aufrichtig und spontanen Impulsen folgend aus.</p>
+        <p>Betrachte nun die einzelnen Items daraufhin, welche Wirkung deine Haltung möglicherweise bei dir und deinem Gegenüber erzielt. Wie wäre es, wenn du deine Haltung an der ein oder anderen Stelle veränderst? Was würde das bewirken? Vielleicht tun sich Entwicklungsrichtungen auf.</p>
+        <p>Tausche dich mit anderen darüber aus.</p>
+        <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
+    </main>
 </body>
 </html>
