--- a/austauschrunde2.html
+++ b/austauschrunde2.html
@@ -1,1 +1,30 @@
 
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/pico.min.css">
+    <script src="js/common.js"></script>
+    <title>Wuselstationen</title>
+</head>
+<body>
+    <main class="container">
+        <h1>Austauschrunde 2</h1>
+        <p>Tausche dich mit einer oder mehreren Person(en) über folgende Fragen aus:</p>
+        <ol>
+            <li>Welche ein bis drei Erkenntnisperlen nimmst du aus dem Impuls zum Thema zukunftsgestaltendes Lernen mit?</li>
+            <li>Was ist dein 'Warum?' in der Bildung?
+                <ol type="a">
+                    <li>Bringe deinen pädagogischen Treiber auf eine Kurzformel: Gute Bildung befähigt Lernende zu ... / Ich bin pädagogisch tätig, weil ... </li>
+                    <li>Tauscht euch aus: Wo stoßt ihr innerhalb bestehender Strukturen auf Widersprüche, wenn ihr Euer 'Warum?' verfolgt?</li>
+                    <li>Was könntet ihr realistisch ausgehend vom Hier und Jetzt nicht nur bei Eurer Haltung, sondern auch in systemischer/ struktureller Hinsicht verändern, um besser zu guter Bildung beitragen zu können?</li>
+      
+                </ol>
+            </li>
+        </ol>
+        <p>Haltet fest, was mögliche, erste Schritte sein könnten. Überlegt dabei bewusst, auch in Grauzonen zu agieren (= Wenn etwas nicht explizit verboten ist, könntet ihr es ja einfach machen!), Fehler und Irrwege bewusst ins Kauf zu nehmen (= es sind Lernprozesse!) und euch darauf zu besinnen, dass ihr gemeinsam wirkungsvoller seid, als allein (= Welche Perspektiven ergeben sich, wenn ihr euch mit Kolleg*innen zusammen schließt?) </p>
+        <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
+    </main>
+</body>
+</html>
