--- a/1.html
+++ b/1.html
@@ -2,45 +2,63 @@
 <html lang="de">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta charset="UTF-8">
-       <link rel="stylesheet" href="css/pico.min.css">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/pico.min.css">
     <script src="js/common.js"></script>
     <title>Wuselstationen</title>
 </head>
 <body>
-
-
     <main class="container">
-
-<h1>Wuselstation #x: Titel</h1>
-
-  <article id="article">
-     👉 Kurze Info , um was es geht.
-  </article>
-
-  <details>
-        <summary>Hintergrund</summary>
-        <p>Was ist der Sinn dieser Station?
-        </p>
-      
-    </details>
-    <details>
-        <summary>Benötigtes Material</summary>
-       <ul>
-      <li>Was braucht man/ was stellen wir an den Tischen zur Verfügung?
-
-       </ul>
-    </details>
-
-<h2>Beschreibung</h2>
-<p>Was kann hier gemacht werden? Wie soll man das machen?
-</p>
-
-
-    <p> <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
-</main>
-
-    
-
+        <h1>Wuselstation #1: Methodischer Rahmen für Gespräche im pädagogischen Raum</h1>
+        <article id="article">
+            👉 An dieser Station kannst du dich über unterschiedliche methodische Möglichkeiten für Gespräche im pädagogischen Raum informieren und sie direkt mit Kolleg*innen ausprobieren.
+        </article>
+        <details>
+            <summary>Hintergrund</summary>
+            <p>Gutes Lernen braucht die Kompetenzen von Zuhören und Dialog. Es ist unsere pädagogische Herausforderung, diese Kompetenzen nicht nur zu nutzen, sondern auch zu entwickeln. Eine gute methodische Rahmung kann dabei sehr hilfreich sein.</p>
+        </details>
+        <details>
+            <summary>Benötigtes Material</summary>
+            <ul>
+                <li>Du findest im Folgenden und vor Ort auch auf den Tischen drei Methodenbeschreibungen. Ihr könnt einzelne oder auch alle ausprobieren.</li>
+            </ul>
+        </details>
+        <h2>Beschreibung</h2>
+        <h3>Methode 1: Pop-Up Meeting</h3>
+        <ol>
+            <li>Schreibt ein selbstgewähltes Thema oder eine Frage in die Mitte vor euch auf ein Blatt Papier oder Flipchart. Zeichnet ein Viereck darum. An die Linien kommt ein lachendes Smiley, ein weinendes Smiley, ein Fragezeichen und ein Infozeichen.</li>
+            <li>Nehmt alle Post-Its und einen Stift zur Hand und notiert darauf:
+                <ol>
+                    <li>eine positive Sache, die euch zu dem Thema einfällt</li>
+                    <li>eine negative Sache, die euch zu dem Thema einfällt</li>
+                    <li>eine Frage, die euch zu dem Thema einfällt</li>
+                    <li>eine Information, die euch zu dem Thema einfällt</li>
+                </ol>
+                (Ihr müsst nicht zu allen Kategorien etwas aufschreiben, könnt auch mehrere Sachen zu einer Kategorie notieren und insgesamt so viele Post-Its beschreiben, wie euch wichtig ist. Wichtig ist: immer nur eine Sache pro Post-It!)
+            </li>
+            <li>Startet euren Austausch, indem ihr reihum immer ein Post-It auswählt, es der Gruppe vorlest und an der entsprechenden Stelle aufklebt (lachendes Smiley = positive Sachen, weinendes Smiley = negative Sachen, Fragezeichen = Fragen, Info-Zeichen = Informationen). Kommentiert/diskutiert noch nicht, sondern legt erst einmal alles vor euch aus. Falls sich Sachen doppeln, könnt ihr diese direkt an den entsprechenden Stellen geclustert dazu legen.</li>
+            <li>Wenn niemand mehr ein beschriebenes Post-It hat, bearbeitet ihr zunächst die Informationen, dann die positiven und negativen Sachen und dann die Fragen. Bearbeitung heißt hier, dass ihr die für euch wichtigsten Post-Its aufgreift und gemeinsam diskutiert.</li>
+            <li>Ihr könnt so lange diskutieren, wie ihr es für euch als relevant erachtet.</li>
+        </ol>
+        <h3>Methode 2: Kollegiale Beratung</h3>
+        <ol>
+            <li>Wenn ihr mehr als 5 Personen seid, dann teilt euch in Kleingruppen auf. In jeder Kleingruppe sollten 3-5 Personen vertreten sein. Setzt euch als Kleingruppe in einen Stuhlkreis. Bestimmt eine Person in jeder Gruppe als Zeitwächter*in.</li>
+            <li>Eine Person aus jeder Kleingruppe beginnt und stellt eine konkrete Frage, die ihr zum Thema des Schulentwicklungstages und den bisherigen Learnings in den Sinn kommt und die in ihrem Kontext wichtig ist, an die übrigen Mitglieder ihrer Kleingruppe. Dann dreht sie sich mit dem Rücken zu den anderen Gruppenmitgliedern, so dass sie das folgende Gespräch hören kann, aber nicht Teil der Diskussion ist.</li>
+            <li>Die verbleibenden Mitglieder beraten darüber, wie sie der fragenden Person helfen könnten. Sie tauschen sich dazu zu ihren Erfahrungen und Ideen aus. Die Zeitwächter*in stoppt den Beratungsprozess nach 4 Minuten.</li>
+            <li>Anschließend ist die nächste Person an der Reihe, die eine Frage zu dem Thema aus ihrem Kontext stellt, sich wegdreht und von den anderen beraten wird. Auch hier wird der Beratungsprozess nach 4 Minuten gestoppt.</li>
+            <li>Wenn ihr noch Zeit und Lust für eine dritte Beratungsrunde habt, dann kann noch eine dritte Person ihre Frage einbringen und das Prozedere wird entsprechend wiederholt.</li>
+        </ol>
+        <h3>Methode 3: Kopfstand</h3>
+        <ol>
+            <li>Überlegt euch ein Problem, mit dem ihr im Kontext eurer Lerngestaltung und Unterricht konfrontiert seid.</li>
+            <li>Dreht das Problem nun um: Wie könntet ihr das Problem verschlimmern? Was müsstet ihr tun, damit garantiert alles schiefgeht? Sammelt auf Post-Its so viele „Anti-Lösungen" wie möglich – seid kreativ und übertreibt ruhig.</li>
+            <li>Betrachtet eure Liste der Anti-Lösungen und dreht sie nun wieder um: Was wäre jeweils das Gegenteil davon? Das sind eure möglichen Lösungsansätze.</li>
+            <li>Diskutiert die entstandenen Lösungsideen: Welche sind realistisch? Welche besonders vielversprechend?</li>
+            <li>Wählt 1-3 Ideen aus, die ihr weiterverfolgen wollt, und überlegt konkrete nächste Schritte.</li>
+        </ol>
+        <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
+        <h2>Weitere Anregungen</h2>
+        <p>Weitere Anregungen zur methodischen Lerngestaltung findet ihr im Blog von Nele unter dem Schlagwort Methoden & Lernformate: <a href="https://ebildungslabor.de/tag/methoden/">https://ebildungslabor.de/tag/methoden/</a></p>
+    </main>
 </body>
 </html>
