Update content and structure in 2.html

--- a/2.html
+++ b/2.html
@@ -2,45 +2,66 @@
 <html lang="de">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta charset="UTF-8">
-       <link rel="stylesheet" href="css/pico.min.css">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/pico.min.css">
     <script src="js/common.js"></script>
     <title>Wuselstationen</title>
 </head>
 <body>
-
-
     <main class="container">
+        <h1>Wuselstation #2: Framework der Inner Development Goals (IDGs) - Selbstentwicklung im Unterricht</h1>
+        <article id="article">
+            👉 Im Impuls von Nele wurden die Inner Development Goals vorgestellt. Hier kannst du sie im Austausch mit Kolleg*innen vertiefen.
+        </article>
+        <details>
+            <summary>Hintergrund</summary>
+            <p>An dieser Station findest du vertiefende Informationen zu den IDGs. Sie sind eine wertvolle Orientierung, um überfachliche Kompetenzentwicklung im Unterricht in den Blick zu nehmen.</p>
+        </details>
+        <details>
+            <summary>Benötigtes Material</summary>
+            <ul>
+                <li>Die einzelnen Kategorien der IDGs werden im Folgenden vorgestellt. Diese Informationen sind die Grundlagen für euren Austausch.</li>
+            </ul>
+        </details>
+        <h2>Beschreibung</h2>
+        <p>Im Folgenden findet ihr Beschreibungen der einzelnen Kategorien der IDGs. Lest euch die Beschreibungen einzeln durch und reflektiert mit Kolleg*innen:</p>
+        <ol>
+            <li>Wie verstehen wir diese Kategorie?</li>
+            <li>Inwieweit können Lernende in unserem Unterricht bereits jetzt die Kompetenzen dieser Kategorie entwickeln? Was ist dafür ausschlaggebend?</li>
+            <li>Wie könnten wir die Entwicklung der IDGs noch besser unterstützen?</li>
+        </ol>
 
-<h1>Wuselstation #x: Titel</h1>
+        <!-- Kategorie SEIN -->
+        <details>
+            <summary><h3>😊 Kategorie SEIN</h3></summary>
+            <p>Diese Kategorie fokussiert die Beziehung zu sich selbst: Lernende sollen ein stabiles inneres Fundament entwickeln, damit sie auch in komplexen Situationen handlungsfähig bleiben. Wer sich selbst gut kennt und versteht, was wirklich wichtig ist, kann authentischer agieren und bleibt orientiert. In einer digital geprägten Lebenswelt mit vielfältigen Möglichkeiten der Selbstdarstellung und Vernetzung hilft diese innere Klarheit, selbstbestimmt zu entscheiden. Dazu gehören Fähigkeiten wie: Selbstwahrnehmung, Selbstreflexion, innerer Kompass, Integrität, Offenheit, Lernbereitschaft, Präsenz.</p>
+        </details>
 
-  <article id="article">
-     👉 Kurze Info , um was es geht.
-  </article>
+        <!-- Kategorie DENKEN -->
+        <details>
+            <summary><h3>❓ Kategorie DENKEN</h3></summary>
+            <p>Diese Kategorie fokussiert kognitive Fähigkeiten: Lernende sollen komplexe Zusammenhänge verstehen und mit Unsicherheit umgehen können, um informierte und reflektierte Entscheidungen zu treffen. Digitale Technologien eröffnen Zugang zu vielen Perspektiven und Wissensquellen – eine Chance zum Erkunden und Lernen. Um diese Möglichkeiten gewinnbringend zu nutzen, braucht es die Fähigkeit, verschiedene Standpunkte einzunehmen, Informationen kritisch einzuordnen und eigene Schlüsse zu ziehen. Dazu gehören Fähigkeiten wie: kritisches Denken, Perspektivenvielfalt, Sensemaking, Bewusstsein für Komplexität, langfristiges Denken.</p>
+        </details>
 
-  <details>
-        <summary>Hintergrund</summary>
-        <p>Was ist der Sinn dieser Station?
-        </p>
-      
-    </details>
-    <details>
-        <summary>Benötigtes Material</summary>
-       <ul>
-      <li>Was braucht man/ was stellen wir an den Tischen zur Verfügung?
+        <!-- Kategorie BEZIEHUNG -->
+        <details>
+            <summary><h3>❤️ Kategorie BEZIEHUNG</h3></summary>
+            <p>Diese Kategorie fokussiert Fürsorge und Verbundenheit mit anderen: Lernende sollen echte Beziehungen aufbauen und Empathie entwickeln, damit sie sich als Teil einer größeren Gemeinschaft verstehen. Lernen ist immer auch ein sozialer Prozess. Digitale Räume erweitern unsere Möglichkeiten, mit Menschen überall auf der Welt in Kontakt zu treten und gemeinsam zu lernen. Gleichzeitig braucht es Empathie und Wertschätzung, um diese Verbindungen – ob analog oder digital – lebendig und bedeutsam zu gestalten. Dazu gehören Fähigkeiten wie: Wertschätzung, Verbundenheit, Demut, Empathie, Mitgefühl.</p>
+        </details>
 
-       </ul>
-    </details>
+        <!-- Kategorie ZUSAMMENARBEIT -->
+        <details>
+            <summary><h3>💬 Kategorie ZUSAMMENARBEIT</h3></summary>
+            <p>Diese Kategorie fokussiert soziale Fähigkeiten: Lernende sollen konstruktiv mit anderen zusammenarbeiten können, um gemeinsam Lösungen zu entwickeln und Veränderungen zu gestalten. Digitale Tools eröffnen völlig neue Möglichkeiten der Kollaboration: gemeinsam an Dokumenten arbeiten, Ideen in Echtzeit teilen, kreative Projekte über Distanzen hinweg entwickeln. Diese Potenziale zu nutzen erfordert soziale Fähigkeiten wie konstruktive Kommunikation und die Bereitschaft, verschiedene Perspektiven einzubeziehen. Dazu gehören Fähigkeiten wie: Kommunikationsfähigkeit, Co-Creation, inklusive Haltung, Vertrauen, Mobilisierungsfähigkeit.</p>
+        </details>
 
-<h2>Beschreibung</h2>
-<p>Was kann hier gemacht werden? Wie soll man das machen?
-</p>
+        <!-- Kategorie HANDELN -->
+        <details>
+            <summary><h3>➡️ Kategorie HANDELN</h3></summary>
+            <p>Diese Kategorie fokussiert die Fähigkeit, Veränderung zu ermöglichen: Lernende sollen vom Denken ins Tun kommen und wirksam werden, um aktiv zur Gestaltung einer zukunftsfähigen Welt beizutragen. Digitale Technologien sind Werkzeuge, mit denen wir unsere Lebenswelt aktiv gestalten können – durch kreative Projekte, Teilen von Wissen oder Initiativen für Veränderung. Wenn Lernende diese Gestaltungsmöglichkeiten erkunden und erleben, dass sie selbst etwas bewirken können, stärkt das ihre Selbstwirksamkeit und ihren Gestaltungswillen. Dazu gehören Fähigkeiten wie: Mut, Kreativität, Optimismus, Ausdauer.</p>
+        </details>
 
-
-    <p> <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
-</main>
-
-    
-
+        <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
+    </main>
 </body>
 </html>
