Simplify summary tags in detail sections

--- a/2.html
+++ b/2.html
@@ -33,31 +33,31 @@
 
         <!-- Kategorie SEIN -->
         <details>
-            <summary><h3>😊 Kategorie SEIN</h3></summary>
+            <summary>😊 Kategorie SEIN</summary>
             <p>Diese Kategorie fokussiert die Beziehung zu sich selbst: Lernende sollen ein stabiles inneres Fundament entwickeln, damit sie auch in komplexen Situationen handlungsfähig bleiben. Wer sich selbst gut kennt und versteht, was wirklich wichtig ist, kann authentischer agieren und bleibt orientiert. In einer digital geprägten Lebenswelt mit vielfältigen Möglichkeiten der Selbstdarstellung und Vernetzung hilft diese innere Klarheit, selbstbestimmt zu entscheiden. Dazu gehören Fähigkeiten wie: Selbstwahrnehmung, Selbstreflexion, innerer Kompass, Integrität, Offenheit, Lernbereitschaft, Präsenz.</p>
         </details>
 
         <!-- Kategorie DENKEN -->
         <details>
-            <summary><h3>❓ Kategorie DENKEN</h3></summary>
+            <summary>❓ Kategorie DENKEN</summary>
             <p>Diese Kategorie fokussiert kognitive Fähigkeiten: Lernende sollen komplexe Zusammenhänge verstehen und mit Unsicherheit umgehen können, um informierte und reflektierte Entscheidungen zu treffen. Digitale Technologien eröffnen Zugang zu vielen Perspektiven und Wissensquellen – eine Chance zum Erkunden und Lernen. Um diese Möglichkeiten gewinnbringend zu nutzen, braucht es die Fähigkeit, verschiedene Standpunkte einzunehmen, Informationen kritisch einzuordnen und eigene Schlüsse zu ziehen. Dazu gehören Fähigkeiten wie: kritisches Denken, Perspektivenvielfalt, Sensemaking, Bewusstsein für Komplexität, langfristiges Denken.</p>
         </details>
 
         <!-- Kategorie BEZIEHUNG -->
         <details>
-            <summary><h3>❤️ Kategorie BEZIEHUNG</h3></summary>
+            <summary>❤️ Kategorie BEZIEHUNG</summary>
             <p>Diese Kategorie fokussiert Fürsorge und Verbundenheit mit anderen: Lernende sollen echte Beziehungen aufbauen und Empathie entwickeln, damit sie sich als Teil einer größeren Gemeinschaft verstehen. Lernen ist immer auch ein sozialer Prozess. Digitale Räume erweitern unsere Möglichkeiten, mit Menschen überall auf der Welt in Kontakt zu treten und gemeinsam zu lernen. Gleichzeitig braucht es Empathie und Wertschätzung, um diese Verbindungen – ob analog oder digital – lebendig und bedeutsam zu gestalten. Dazu gehören Fähigkeiten wie: Wertschätzung, Verbundenheit, Demut, Empathie, Mitgefühl.</p>
         </details>
 
         <!-- Kategorie ZUSAMMENARBEIT -->
         <details>
-            <summary><h3>💬 Kategorie ZUSAMMENARBEIT</h3></summary>
+            <summary>💬 Kategorie ZUSAMMENARBEIT</summary>
             <p>Diese Kategorie fokussiert soziale Fähigkeiten: Lernende sollen konstruktiv mit anderen zusammenarbeiten können, um gemeinsam Lösungen zu entwickeln und Veränderungen zu gestalten. Digitale Tools eröffnen völlig neue Möglichkeiten der Kollaboration: gemeinsam an Dokumenten arbeiten, Ideen in Echtzeit teilen, kreative Projekte über Distanzen hinweg entwickeln. Diese Potenziale zu nutzen erfordert soziale Fähigkeiten wie konstruktive Kommunikation und die Bereitschaft, verschiedene Perspektiven einzubeziehen. Dazu gehören Fähigkeiten wie: Kommunikationsfähigkeit, Co-Creation, inklusive Haltung, Vertrauen, Mobilisierungsfähigkeit.</p>
         </details>
 
         <!-- Kategorie HANDELN -->
         <details>
-            <summary><h3>➡️ Kategorie HANDELN</h3></summary>
+            <summary>➡️ Kategorie HANDELN</summary>
             <p>Diese Kategorie fokussiert die Fähigkeit, Veränderung zu ermöglichen: Lernende sollen vom Denken ins Tun kommen und wirksam werden, um aktiv zur Gestaltung einer zukunftsfähigen Welt beizutragen. Digitale Technologien sind Werkzeuge, mit denen wir unsere Lebenswelt aktiv gestalten können – durch kreative Projekte, Teilen von Wissen oder Initiativen für Veränderung. Wenn Lernende diese Gestaltungsmöglichkeiten erkunden und erleben, dass sie selbst etwas bewirken können, stärkt das ihre Selbstwirksamkeit und ihren Gestaltungswillen. Dazu gehören Fähigkeiten wie: Mut, Kreativität, Optimismus, Ausdauer.</p>
         </details>
 
