Add method selection instructions to 1.html
Added instructions for selecting methods to try out.

--- a/1.html
+++ b/1.html
@@ -24,6 +24,7 @@
             </ul>
         </details>
         <h2>Beschreibung</h2>
+        <p>Wählt euch eine oder mehrere Methoden zum Ausprobieren aus und folgt dann der Anleitung.</p>
         <h3>Methode 1: Pop-Up Meeting</h3>
         <ol>
             <li>Schreibt ein selbstgewähltes Thema oder eine Frage in die Mitte vor euch auf ein Blatt Papier oder Flipchart. Zeichnet ein Viereck darum. An die Linien kommt ein lachendes Smiley, ein weinendes Smiley, ein Fragezeichen und ein Infozeichen.</li>
