--- a/index.html
+++ b/index.html
@@ -12,13 +12,20 @@
 
     <main class="container">
         <h1>Materialien zum Schulentwicklungstag der beruflichen Schulen im Kreis Ostholstein in Oldenburg am 2. Februar 2026</h1>
-        <h2>Austauschrunden am Vormittag</h2>
+        <h2>🗨️ Austauschrunden am Vormittag</h2>
 
           <p><a href="austauschrunde1.html"><button>Austausch zum ersten Impuls: Guter Unterricht? Auf die Haltung kommt es an!</button></a></p>
           <p><a href="austauschrunde2.html"><button>Austausch zum zweiten Impuls: Zukunftsgestaltendes Lernen: Über das 'Warum?' in der Bildung</button></a></p>
+
+        <h2>🙂 Betreute Wuselstationen</h2>
+        <p>An den betreuten Wuselstationen könnt ihr im Gespräch mit den Referentinnen Eure Fragen klären und kurze Impulse hören. Ihr könnt jederzeit dazu stoßen und auch wieder weiter gehen.</p>
+        <p><a href="b1.html"><button>#A: Mit Nele Hirsch: Fragen und Austausch zum Lernen und Lehren mit Künstlicher Intelligenz (KI) Raum T04, erster Stock</button></a></p>
+         <p><a href="b2.html"><button>#B: Mit Ina Moebius: Herausforderungen von und mit der Generation Z, Raum T03, erster Stock</button></a></p>
+         <p><a href="b3.html"><button>#C: Mit Ann-Kathrin Peters: Klassenführung, Raum T06, erster Stock</button></a></p>
+         <p><a href="b4.html"><button>#D: Mit Katrin Halfmann: Gut aufgestellt den Schulalltag meistern! Raum T BUE 1, erster Stock</button></a></p>
         
-<h2>👣 Übersicht unserer selbstorganisierten Wuselstationen</h2>
-        <p>Hier findet ihr Materialien und weiterführende Informationen zu den Wuselstationen des Schulentwicklungstages:
+<h2>👣 Selbstorganisierte Wuselstationen</h2>
+        <p>An den selbstorganisierten Wuselstationen findet ihr kurze Impulse und Methoden zum Ausprobieren und um untereinander ins Gespräch kommen. Wählt aus, was euch für euch besonders interessant erscheint. Den genauen Ort der Wuselstationen findet ihr im Raumplan.:</p>
         <p><a href="1.html"><button>#1: Methodischer Rahmen für Gespräche im pädagogischen Raum - mit Lernenden und als kollegiale Beratung</button></a></p>
       <p><a href="2.html"><button>#2: Rahmenwerk der Inner Development Goals: Selbstentwicklung im Unterricht</button></a></p>
 <p><a href="3.html"><button>#3: Pädagogische Widersprüche für sich austarieren und mit anderen reflektieren</button></a></p>
@@ -31,11 +38,14 @@
 <p><a href="10.html"><button>#10: Kurze Bewegungsübungen für den Unterricht: „Ich schaf(f) das!“</button></a></p>
 <p><a href="11.html"><button>#11: Selbsttest zur pädagogischen Beziehungsgestaltung </button></a></p>
 <p><a href="12.html"><button>#12: Linkliste zum Erweitern</button></a></p>
-<p><a href="13.html"><button>#13: Joker - eine eigene Herausforderung definieren</button></a></p>
+        <p><a href="13.html"><button>#13: Mit anderen Augen</button></a></p>
+            <p><a href="14.html"><button>#14: Stress lass nach</button></a></p>
+        <p><a href="15.html"><button>#15: Linkliste zum Erweitern</button></a></p>
+<p><a href="16.html"><button>#16: Joker - eine eigene Herausforderung definieren</button></a></p>
 <p>Viel Freude und Erfolg beim gemeinsamen Erkunden! 🙂</p>
 </main>
  <footer class="container">
-      <small>Diese Wuselstationen wurden für den Schulentwicklungstag der beruflichen Schule des Kreises Ostholstein in Oldenburg im Februar 2026 online gestellt. Sie bleiben auch nach der Veranstaltung online und können gerne weiter genutzt werden.
+      <small>Diese Website wurden für den Schulentwicklungstag der beruflichen Schule des Kreises Ostholstein in Oldenburg im Februar 2026 online gestellt. Sie bleibt auch nach der Veranstaltung online und kann gerne weiter genutzt werden.
         Lizenz: <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.de"
           >CC0 1.0</a
         ></small>
