--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main class="container">
         <h1>Materialien zum Schulentwicklungstag der beruflichen Schulen im Kreis Ostholstein in Oldenburg am 2. Februar 2026</h1>
         <h2>🗨️ Austauschrunden am Vormittag</h2>
-
+<p>Nach jedem der beiden Impulse habt ihr mindestens eine halbe Stunde Zeit, um das Gehörte im Austaisch mit Kolleg*innen zu vertiefen und auf Euren Kontext hin weiter zu entwickeln.</p>
           <p><a href="austauschrunde1.html"><button>Austausch zum ersten Impuls: Guter Unterricht? Auf die Haltung kommt es an!</button></a></p>
           <p><a href="austauschrunde2.html"><button>Austausch zum zweiten Impuls: Zukunftsgestaltendes Lernen: Über das 'Warum?' in der Bildung</button></a></p>
 
@@ -36,8 +36,8 @@
 <p><a href="8.html"><button>#8: Achtsamkeitsübungen</button></a></p>
 <p><a href="9.html"><button>#9: Systemische Fragen</button></a></p>
 <p><a href="10.html"><button>#10: Kurze Bewegungsübungen für den Unterricht: „Ich schaf(f) das!“</button></a></p>
-<p><a href="11.html"><button>#11: Selbsttest zur pädagogischen Beziehungsgestaltung </button></a></p>
-<p><a href="12.html"><button>#12: Linkliste zum Erweitern</button></a></p>
+<p><a href="11.html"><button>#11: Psychologische Sicherheit</button></a></p>
+        <p><a href="12.html"><button>#12: Selbsttest zur pädagogischen Beziehungsgestaltung </button></a></p>
         <p><a href="13.html"><button>#13: Mit anderen Augen</button></a></p>
             <p><a href="14.html"><button>#14: Stress lass nach</button></a></p>
         <p><a href="15.html"><button>#15: Linkliste zum Erweitern</button></a></p>
