--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <title>Materialien zum SET am 2. Februar 2026</title>
 </head>
 <body>
-<header class="container">
-<h1>Materialien zum Schulentwicklungstag der beruflichen Schulen im Kreis Ostholstein in Oldenburg</h1>
-        <p>2. Februar 2026 in Timmendorfer Strand</p>
-</header>
+
 
     <main class="container">
+<h1>Materialien zum Schulentwicklungstag der beruflichen Schulen im Kreis Ostholstein in Oldenburg am 2. Februar 2026 in Timmendorfer Strand</h1>
+
         
         <h2>🗨️ Austauschrunden am Vormittag</h2>
 <p>Nach jedem der beiden Impulse habt ihr mindestens eine halbe Stunde Zeit, um das Gehörte im Austaisch mit Kolleg*innen zu vertiefen und auf Euren Kontext hin weiter zu entwickeln.</p>
