--- a/b1.html
+++ b/b1.html
@@ -11,6 +11,7 @@
     <main class="container">
         <h1>Fragen und Austausch zum Lernen und Lehren mit Künstlicher Intelligenz (KI) </h1>
         <p>Raum T04, erster Stock mit Nele Hirsch</p>
+        <p>Weitere Materialien ztur Station werden hier gegebenenfalls nach der Veranstaltung eingestellt.
         <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
     </main>
 </body>
