--- a/austauschrunde2.html
+++ b/austauschrunde2.html
@@ -13,13 +13,17 @@
         <h1>Austauschrunde 2</h1>
         <p>Tausche dich mit einer oder mehreren Person(en) über folgende Fragen aus:</p>
         <ol>
-            <li>Welche ein bis drei Erkenntnisperlen nimmst du aus dem Impuls zum Thema zukunftsgestaltendes Lernen mit?</li>
-            <li>Was ist dein 'Warum?' in der Bildung?
-                <ol type="a">
-                    <li>Bringe deinen pädagogischen Treiber auf eine Kurzformel: Gute Bildung befähigt Lernende zu ... / Ich bin pädagogisch tätig, weil ... </li>
-                    <li>Tauscht euch aus: Wo stoßt ihr innerhalb bestehender Strukturen auf Widersprüche, wenn ihr Euer 'Warum?' verfolgt?</li>
-                    <li>Was könntet ihr realistisch ausgehend vom Hier und Jetzt nicht nur bei Eurer Haltung, sondern auch in systemischer/ struktureller Hinsicht verändern, um besser zu guter Bildung beitragen zu können?</li>
-      
+            <li>Was war für dich der wichtigste Aspekt aus dem Impuls zum Thema zukunftsgestaltendes Lernen? Was bedeutet dieser Aspekt in deiner pädagogischen Tätigkeit?</li>
+            <li>Was ist dein 'Warum?' in der Bildung? Bringe deinen pädagogischen Treiber auf eine Kurzformel: "Gute Bildung befähigt Lernende zu ..." / "Ich bin pädagogisch tätig, weil ..." </li>
+                    <li>Im Impuls hat Nele 5 mögliche Orientierungen für das 'Wie?' von Unterrichtentwicklung vorgestellt. Sicht euch einzelne Orientierungen davon heraus und überlegt euch, wie ihr das konkret in eurem Kontext umsetzen könntet:</li>
+            <ul>
+                    <li>SOWOHL-ALS-AUCH DENKEN (symbolisiert mit dem Seil): Welche scheinbaren Widersprüche in deinem pädagogischen Handeln könntest du als produktive Spannungen wahrnehmen statt sie aufzulösen?</li>
+                <li>ERSTE SCHRITTE (symbolisiert mit dem Schiebepuzzle): Wo siehst du in deinem Kontext vor allem Handlungsspielraum? Wie könntest du diesen nutzen?</li>
+                <li>SYSTEMDENKEN (symbolisiert mit der Pflanze): Welche Strukturen und Rahmenbedingungen beeinflussen dein pädagogisches Handeln - und wo könntest du ansetzen, um etwas zu verändern?</li>
+                <li>RADIKALE GEGENWART (symbolisiert mit dem Schlüssel): Wie kannst du die Welt mit all ihren Widersprüchen und aktuellen Herausforderungen authentisch in deine Lernräume holen?</li>
+                <li>KOLLABORATION (symbolisiert mit den Luftballons): Wo könntest du dich wie mit anderen verbinden, um gemeinsam wirkungsvoller pädagogisch tätig zu sein?</li>
+    
+            </ul>
                 </ol>
             </li>
         </ol>
