Revise prompts and instructions for clarity
Updated the content to encourage reflection on actions in gray areas and to document insights in a learning journal.

--- a/austauschrunde2.html
+++ b/austauschrunde2.html
@@ -18,7 +18,7 @@
                     <li>Im Impuls hat Nele 5 mögliche Orientierungen für das 'Wie?' von Unterrichtentwicklung vorgestellt. Sicht euch einzelne Orientierungen davon heraus und überlegt euch, wie ihr das konkret in eurem Kontext umsetzen könntet:</li>
             <ul>
                     <li>SOWOHL-ALS-AUCH DENKEN (symbolisiert mit dem Seil): Welche scheinbaren Widersprüche in deinem pädagogischen Handeln könntest du als produktive Spannungen wahrnehmen statt sie aufzulösen?</li>
-                <li>ERSTE SCHRITTE (symbolisiert mit dem Schiebepuzzle): Wo siehst du in deinem Kontext vor allem Handlungsspielraum? Wie könntest du diesen nutzen?</li>
+                <li>ERSTE SCHRITTE (symbolisiert mit dem Schiebepuzzle): Wo siehst du in deinem Kontext vor allem Handlungsspielraum? Wie könntest du diesen nutzen? Überlegt dabei bewusst, auch in Grauzonen zu agieren (= Wenn etwas nicht explizit verboten ist, könntet ihr es ja einfach machen!).</li>
                 <li>SYSTEMDENKEN (symbolisiert mit der Pflanze): Welche Strukturen und Rahmenbedingungen beeinflussen dein pädagogisches Handeln - und wo könntest du ansetzen, um etwas zu verändern?</li>
                 <li>RADIKALE GEGENWART (symbolisiert mit dem Schlüssel): Wie kannst du die Welt mit all ihren Widersprüchen und aktuellen Herausforderungen authentisch in deine Lernräume holen?</li>
                 <li>KOLLABORATION (symbolisiert mit den Luftballons): Wo könntest du dich wie mit anderen verbinden, um gemeinsam wirkungsvoller pädagogisch tätig zu sein?</li>
@@ -27,7 +27,7 @@
                 </ol>
             </li>
         </ol>
-        <p>Haltet fest, was mögliche, erste Schritte sein könnten. Überlegt dabei bewusst, auch in Grauzonen zu agieren (= Wenn etwas nicht explizit verboten ist, könntet ihr es ja einfach machen!), Fehler und Irrwege bewusst ins Kauf zu nehmen (= es sind Lernprozesse!) und euch darauf zu besinnen, dass ihr gemeinsam wirkungsvoller seid, als allein (= Welche Perspektiven ergeben sich, wenn ihr euch mit Kolleg*innen zusammen schließt?) </p>
+        <p>Haltet Eure Erkenntnisse in Eurem Lernjournal für Euch fest.</p>
         <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
     </main>
 </body>
