--- a/austauschrunde2.html
+++ b/austauschrunde2.html
@@ -15,7 +15,7 @@
         <ol>
             <li>Was war für dich der wichtigste Aspekt aus dem Impuls zum Thema zukunftsgestaltendes Lernen? Was bedeutet dieser Aspekt in deiner pädagogischen Tätigkeit?</li>
             <li>Was ist dein 'Warum?' in der Bildung? Bringe deinen pädagogischen Treiber auf eine Kurzformel: "Gute Bildung befähigt Lernende zu ..." / "Ich bin pädagogisch tätig, weil ..." </li>
-                    <li>Im Impuls hat Nele 5 mögliche Orientierungen für das 'Wie?' von Unterrichtentwicklung vorgestellt. Sicht euch einzelne Orientierungen davon heraus und überlegt euch, wie ihr das konkret in eurem Kontext umsetzen könntet:</li>
+                    <li>Im Impuls hat Nele 5 mögliche Orientierungen für das 'Wie?' von Unterrichtentwicklung vorgestellt. Sucht euch einzelne Orientierungen davon heraus und überlegt euch, wie ihr das konkret in eurem Kontext umsetzen könntet:</li>
             <ul>
                     <li>SOWOHL-ALS-AUCH DENKEN (symbolisiert mit dem Seil): Welche scheinbaren Widersprüche in deinem pädagogischen Handeln könntest du als produktive Spannungen wahrnehmen statt sie aufzulösen?</li>
                 <li>ERSTE SCHRITTE (symbolisiert mit dem Schiebepuzzle): Wo siehst du in deinem Kontext vor allem Handlungsspielraum? Wie könntest du diesen nutzen? Überlegt dabei bewusst, auch in Grauzonen zu agieren (= Wenn etwas nicht explizit verboten ist, könntet ihr es ja einfach machen!).</li>
