Update text for clarity in austauschrunde2.html

--- a/austauschrunde2.html
+++ b/austauschrunde2.html
@@ -27,7 +27,7 @@
                 </ol>
             </li>
         </ol>
-        <p>Haltet Eure Erkenntnisse in Eurem Lernjournal für Euch fest.</p>
+        <p>Halte deine Erkenntnisse für dich in deinem Lernjournal fest.</p>
         <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
     </main>
 </body>
