--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
     <main class="container">
 <h1>Materialien zum Schulentwicklungstag der beruflichen Schulen im Kreis Ostholstein in Oldenburg am 2. Februar 2026 in Timmendorfer Strand</h1>
 
-        
+        <h2>⌚ Wichtige Zeiten</h2>
+        <p>Die Zeiten für die Austauschphasen und die Erkundungen der Wuselstationen könnt ihr selbstorganisiert gestalten und dabei auch Kaffeepausen am Vormittag und Nachmittag sowie das Mittagessen flexibel planen. Bitte seid zu den folgenden Zeiten pünktlich im Plenum:</p>
+        <ul><li>Um 8.30 Uhr zu Begrüßung, Vorstellung und erstem Impuls</li>
+        <li>Um 10.30 Uhr zum zweiten Impuls</li>
+            <li>Um 13.00 Uhr zur Vorstellung der Wuselstationen</li>
+            <li>Um 15.00 Uhr zu einem gemeinsamen Abschluss</li>
+        </ul>
+    
         <h2>🗨️ Austauschrunden am Vormittag</h2>
-<p>Nach jedem der beiden Impulse habt ihr mindestens eine halbe Stunde Zeit, um das Gehörte im Austaisch mit Kolleg*innen zu vertiefen und auf Euren Kontext hin weiter zu entwickeln.</p>
+<p>Nach jedem der beiden Impulse habt ihr mindestens eine halbe Stunde Zeit, um das Gehörte im Austausch mit Kolleg*innen zu vertiefen und auf Euren Kontext hin weiter zu entwickeln.</p>
           <p><a href="austauschrunde1.html"><button>Austausch zum ersten Impuls: Guter Unterricht? Auf die Haltung kommt es an!</button></a></p>
           <p><a href="austauschrunde2.html"><button>Austausch zum zweiten Impuls: Zukunftsgestaltendes Lernen: Über das 'Warum?' in der Bildung</button></a></p>
+
 
         <h2>🙂 Betreute Wuselstationen</h2>
         <p>An den betreuten Wuselstationen könnt ihr im Gespräch mit den Referentinnen Eure Fragen klären und kurze Impulse hören. Ihr könnt jederzeit dazu stoßen und auch wieder weiter gehen.</p>
