--- a/austauschrunde2.html
+++ b/austauschrunde2.html
@@ -11,11 +11,8 @@
 <body>
     <main class="container">
         <h1>Austauschrunde 2</h1>
-        <p>Tausche dich mit einer oder mehreren Person(en) über folgende Fragen aus:</p>
-        <ol>
-            <li>Was war für dich der wichtigste Aspekt aus dem Impuls zum Thema zukunftsgestaltendes Lernen? Was bedeutet dieser Aspekt in deiner pädagogischen Tätigkeit?</li>
-            <li>Was ist dein 'Warum?' in der Bildung? Bringe deinen pädagogischen Treiber auf eine Kurzformel: "Gute Bildung befähigt Lernende zu ..." / "Ich bin pädagogisch tätig, weil ..." </li>
-                    <li>Im Impuls hat Nele 5 mögliche Orientierungen für das 'Wie?' von Unterrichtentwicklung vorgestellt. Sucht euch einzelne Orientierungen davon heraus und überlegt euch, wie ihr das konkret in eurem Kontext umsetzen könntet:</li>
+       
+<p>In ihrem Impuls hat Nele 5 mögliche Orientierungen für das 'Wie?' von Unterrichtentwicklung vorgestellt. Sucht euch einzelne Orientierungen davon heraus und überlegt euch, wie ihr das konkret in eurem Kontext umsetzen könntet:</p>
             <ul>
                     <li>SOWOHL-ALS-AUCH DENKEN (symbolisiert mit dem Seil): Welche scheinbaren Widersprüche in deinem pädagogischen Handeln könntest du als produktive Spannungen wahrnehmen statt sie aufzulösen?</li>
                 <li>ERSTE SCHRITTE (symbolisiert mit dem Schiebepuzzle): Wo siehst du in deinem Kontext vor allem Handlungsspielraum? Wie könntest du diesen nutzen? Überlegt dabei bewusst, auch in Grauzonen zu agieren (= Wenn etwas nicht explizit verboten ist, könntet ihr es ja einfach machen!).</li>
@@ -24,10 +21,13 @@
                 <li>KOLLABORATION (symbolisiert mit den Luftballons): Wo könntest du dich wie mit anderen verbinden, um gemeinsam wirkungsvoller pädagogisch tätig zu sein?</li>
     
             </ul>
-                </ol>
-            </li>
-        </ol>
         <p>Halte deine Erkenntnisse für dich in deinem Lernjournal fest.</p>
+        <p>Alternativ könnt ihr Euch auch allgemeiner und übergreifender zum Impuls austauschen. Mögliche Leitfragen sind:
+                    <ol>
+            <li>Was war für dich der wichtigste Aspekt in diesem Impuls?</li> 
+                        <li>Was bedeutet dieser Aspekt in deiner pädagogischen Tätigkeit?</li>
+            <li>Was ist dein 'Warum?' in der Bildung? Bringe deinen pädagogischen Treiber auf eine Kurzformel: "Gute Bildung befähigt Lernende zu ..." / "Ich bin pädagogisch tätig, weil ..." </li>
+                    </ol>
         <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
     </main>
 </body>
