Add instruction to record insights in learning journal

--- a/austauschrunde1.html
+++ b/austauschrunde1.html
@@ -24,6 +24,7 @@
             </li>
         </ol>
         <p>Finde jeweils passende Metaphern dafür (z.B. Antreiber, Regelwächterin, Lernbegleiter, Bergführerin, Mama, …).</p>
+        <p>Halte Erkenntnisse für dich in deinem Lernjournal fest</p>
         <p><a href="index.html"><button>⬅ Zurück zur Übersicht</button></a></p>
     </main>
 </body>
